module(
    name = "app-module",
    version = "0.0.1",
)


#rules
bazel_dep(name = "apple_support", version = "1.6.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "2.3.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_cc", version = "0.0.6")
bazel_dep(name = "rules_swift", version = "1.8.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_xcodeproj", version = "1.6.0")


#lib
bazel_dep(name = "rxswift", version = "6.5.0")